--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -235,6 +235,6 @@
         r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
         ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
-
+<script src="https://kit.fontawesome.com/f2148c770f.js" crossorigin="anonymous"></script>
     </body>
 </html>
