--- a/trust/templates/about.html
+++ b/trust/templates/about.html
@@ -199,8 +199,10 @@
 
 		</div> <!-- /.about-us -->
 
-    <a class="btn btn-lg FAB" href="{% url 'donate' %}">Donate<br>Now!</a>
+		<a class="btn btn-lg FAB" href="{% url 'donate' %}">
+			Donate<br><i style="color: #1F76BD;" class="fas fa-hand-holding-heart"></i><br>Now!
 
+		</a>
 	    <div class="our-team animate-onscroll fadeIn">
 
 	        <div class="container">
