--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -39,6 +39,8 @@
 
 
 
+
+
     </head>
 
 <body>
@@ -224,6 +226,8 @@
 
     <!-- Template main javascript -->
     <script src="{% static 'assets/js/main.js' %}"></script>
+
+    <script src="{% static 'assets/js/counter.js' %}"></script>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
