--- a/trust/templates/events.html
+++ b/trust/templates/events.html
@@ -7,8 +7,10 @@
 
 
 
-        <a class="btn btn-lg FAB" href="{% url 'donate' %}">Donate<br>Now!</a>
+        <a class="btn btn-lg FAB" href="{% url 'donate' %}">
+          Donate<br><i style="color: #1F76BD;" class="fas fa-hand-holding-heart"></i><br>Now!
 
+        </a>
 	<div class="page-heading text-center">
 
 		<div class="container zoomIn animated">
