--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -312,6 +312,34 @@
 
 
   </div> <!-- /.home-reasons -->
+  <!--Up counter-->
+  <!-- <section id="counter" >
+    <div style="margin-right: 0px;" class="row">
+      <div id="block">
+        <div class="container">
+              <div class="column-center">
+                <div id="updateNum2"></div>
+                <div id="row2">
+                  Completed Projects
+                </div>
+              </div>
+              <div class="column-left">
+                <div id="updateNum1"></div>
+                <div id="row1">
+                  Projects in progress
+                </div>
+              </div>
+              <div class="column-right">
+                <div id="updateNum3"></div>
+                <div id="row3">
+                  Number of Partners
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
+
 
     <div style="background: #dedede; padding: 30px;" class="section-home our-sponsors animate-onscroll fadeIn">
 
