--- a/trust/templates/gallery.html
+++ b/trust/templates/gallery.html
@@ -121,8 +121,10 @@
 
     </header> <!-- /. main-header -->
 
-        <a class="btn btn-lg FAB" href="#">Donate<br>Now!</a>
+    <a class="btn btn-lg FAB" href="{% url 'donate' %}">
+      Donate<br><i style="color: #1F76BD;" class="fas fa-hand-holding-heart"></i><br>Now!
 
+    </a>
 
 	<div class="page-heading text-center">
 
