--- a/trust/templates/project.html
+++ b/trust/templates/project.html
@@ -3,8 +3,9 @@
 {% block body_block %}
 
 
-        <a class="btn btn-lg FAB" href="{% url 'donate' %}">Donate<br>Now!</a>
-
+<a class="btn btn-lg FAB" href="{% url 'donate' %}">
+  Donate<br><i style="color: #1F76BD;" class="fas fa-hand-holding-heart"></i><br>Now!
+</a>
 	<div class="page-heading text-center">
 
 		<div class="container zoomIn animated">
