--- a/trust/templates/about.html
+++ b/trust/templates/about.html
@@ -106,218 +106,106 @@
   			</div> <!-- /.row -->
 
 
-			<div class="section-home about-us">
-
-
-			            <div class="row">
-
-			                <div class="col-md-3 col-sm-6">
-
-			                  <div class="about-us-col">
-
-			                        <div class="col-icon-wrapper">
-			                          <img src="{% static 'assets/images/icons/our-mission-icon1.png' %}" alt="">
-			                        </div>
-			                        <h3 class="col-title">our mission</h3>
-			                        <div class="col-details">
-
-			                          <p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
-
-			                        </div>
-			                        <a href="#content" class="btn btn-primary"> Read more </a>
-
-			                  </div>
-
-			                </div>
-
-
-			                <div class="col-md-3 col-sm-6">
-
-			                  <div class="about-us-col">
-
-			                        <div class="col-icon-wrapper">
-			                          <img src="{% static 'assets/images/icons/make-donation-icon1.png' %}" alt="">
-			                        </div>
-			                        <h3 class="col-title">OUR AIM</h3>
-			                        <div class="col-details">
-
-			                          <p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
-
-			                        </div>
-			                        <a href="#content1" class="btn btn-primary"> Read more </a>
-
-			                  </div>
-
-			                </div>
-
-
-			                <div class="col-md-3 col-sm-6">
-
-			                  <div class="about-us-col">
-
-			                        <div class="col-icon-wrapper">
-			                          <img src="{% static 'assets/images/icons/help-icon1.png' %}" alt="">
-			                        </div>
-			                        <h3 class="col-title">Our Events</h3>
-			                        <div class="col-details">
-
-			                          <p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
-
-			                        </div>
-			                        <a href="{% url 'events' %}" class="btn btn-primary"> Read more </a>
-
-			                  </div>
-
-			                </div>
-
-
-			                <div class="col-md-3 col-sm-6">
-
-			                  <div class="about-us-col">
-
-			                        <div class="col-icon-wrapper">
-			                          <img src="{% static 'assets/images/icons/programs-icon1.png' %}" alt="">
-			                        </div>
-			                        <h3 class="col-title">our projects</h3>
-			                        <div class="col-details">
-
-			                          <p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
-
-			                        </div>
-			                        <a href="{% url 'project' %}" class="btn btn-primary"> Read more </a>
-
-			                  </div>
-
-			                </div>
-
-
-
-			            </div> <!-- /.row -->
-
-
-			    </div>
-
 		</div> <!-- /.about-us -->
 
 		<a class="btn btn-lg FAB" href="{% url 'donate' %}">
 			Donate<br><i style="color: #1F76BD;" class="fas fa-hand-holding-heart"></i><br>Now!
 
 		</a>
-	    <div class="our-team animate-onscroll fadeIn">
+		<div style="background: #dedede;" class="section-home about-us fadeIn animated">
 
-	        <div class="container">
+				<div style="
+				padding-top: 50px;
+				padding-bottom: 50px;" class="container">
 
-	            <h2 class="title-style-1">Board Members<span class="title-under"></span></h2>
+						<div class="row">
 
-	            <div class="row members-row">
+								<div class="col-md-3 col-sm-6">
 
-	                <div class="col-md-3 col-sm-6">
+									<div class="about-us-col">
 
-	                    <div class="team-member">
+												<div class="col-icon-wrapper ">
+													<i style="color: #e8a443;" class="fas fa-bullseye fa-6x"></i>
+												</div>
+												<h3 class="col-title">our mission</h3>
+												<div class="col-details">
 
-	                        <div class="thumnail">
+													<p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
 
-	                            <img src="{% static 'assets/images/team/member-2.jpg' %}" alt="" class="cause-img">
+												</div>
+												<a href="{% url 'about' %}" class="btn btn-primary"> Read more </a>
 
-	                        </div>
+									</div>
 
-
-
-	                        <h4 class="member-name">Sajan George</h4>
-
-	                        <div class="member-position">
-	                            CO-FOUNDER
-	                        </div>
-
-	                        <div class="btn-holder">
-	                          <a href="mailto:gsajan52@gmail.com?subject=Enquiry-The Travancore Charitable Trust" class="btn about-icon"> <i class="fa fa-envelope"></i> </a>
-	                          <a href=#" class="btn about-icon"> <i class="fa fa-facebook"></i> </a>
-	                          <a href="#" class="btn about-icon"> <i class="fa fa-twitter"></i> </a>
-	                          <a href="tel:+918086738848" class="btn about-icon"> <i class="fa fa-phone"></i> </a>
-
-	                        </div>
+								</div>
 
 
+								<div class="col-md-3 col-sm-6">
 
-	                    </div> <!-- /.team-member -->
+									<div class="about-us-col">
 
-	                </div>
+												<div class="col-icon-wrapper">
+													<i style="color: #e8a443;" class="fas fa-piggy-bank fa-6x"></i>
+												</div>
+												<h3 class="col-title">Donations</h3>
+												<div class="col-details">
 
+													<p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
 
-	                <div class="col-md-3 col-sm-6">
+												</div>
+												<a href="{% url 'donate' %}" class="btn btn-primary"> Read more </a>
 
-	                    <div class="team-member">
+									</div>
 
-	                        <div class="thumnail">
-
-	                            <img src="{% static 'assets/images/team/member-2.jpg' %}" alt="" class="cause-img">
-
-	                        </div>
-
-
-
-	                        <h4 class="member-name">Harikrishnan Vijayan</h4>
-
-	                        <div class="member-position">
-	                            CO-FOUNDER
-	                        </div>
-
-	                        <div class="btn-holder">
-
-	                          <a href="mailto:hari.vijayan89@gmail.com?subject=Enquiry-The Travancore Charitable Trust" class="btn about-icon"> <i class="fa fa-envelope"></i> </a>
-	                          <a href="#" class="btn about-icon"> <i class="fa fa-facebook"></i> </a>
-	                          <a href="#" class="btn about-icon"> <i class="fa fa-twitter"></i> </a>
-	                          <a href="tel:+918921799665" class="btn about-icon"> <i class="fa fa-phone"></i> </a>
-
-	                        </div>
+								</div>
 
 
+								<div class="col-md-3 col-sm-6">
 
-	                    </div> <!-- /.team-member -->
+									<div class="about-us-col">
 
-	                </div>
+												<div class="col-icon-wrapper">
+													<i style="color: #e8a443;" class="fas fa-handshake fa-6x"></i>
+												</div>
+												<h3 class="col-title">Help & support</h3>
+												<div class="col-details">
+
+													<p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
+
+												</div>
+												<a href="{% url 'contact' %}" class="btn btn-primary"> Read more </a>
+
+									</div>
+
+								</div>
 
 
-	                <div class="col-md-3 col-sm-6">
+								<div class="col-md-3 col-sm-6">
 
-	                    <div class="team-member">
+									<div class="about-us-col">
 
-	                        <div class="thumnail">
+												<div class="col-icon-wrapper">
+													<i style="color: #e8a443;" class="fas fa-puzzle-piece fa-6x"></i>
+												</div>
+												<h3 class="col-title">our programs</h3>
+												<div class="col-details">
 
-	                            <img src="{% static 'assets/images/team/member-2.jpg' %}" alt="" class="cause-img">
+													<p>Lorem ipsum dolor sit amet consect adipisscin elit proin vel lectus ut eta esami vera dolor sit amet consect</p>
 
-	                        </div>
+												</div>
+												<a href="{% url 'project' %}" class="btn btn-primary"> Read more </a>
 
+									</div>
 
-
-
-
-	                        <div class="member-position">
-                                <h4 class="member-name">Lijo Thomas</h4>
-	                            CO-FOUNDER
-	                        </div>
-
-	                        <div class="btn-holder">
-
-	                          <a href="mailto:thomaslijo634@gmail.com?subject=Enquiry-The Travancore Charitable Trust" class="btn about-icon"> <i class="fa fa-envelope"></i> </a>
-	                          <a href="#" class="btn about-icon"> <i class="fa fa-facebook"></i> </a>
-	                          <a href="#" class="btn about-icon"> <i class="fa fa-twitter"></i> </a>
-	                          <a href="tel:+919744492745" class="btn about-icon"> <i class="fa fa-phone"></i> </a>
-
-	                        </div>
+								</div>
 
 
 
-	                    </div> <!-- /.team-member -->
+						</div>
 
-	                </div>
+				</div>
 
-	            </div> <!-- /.row -->
-
-	        </div>
-
-	    </div>
-
+		</div> <!-- /.about-us -->
 
 
 	</div>
