Readded founders' cards

--- a/trust/templates/about.html
+++ b/trust/templates/about.html
@@ -207,6 +207,120 @@
 
 		</div> <!-- /.about-us -->
 
+		<div class="our-team animate-onscroll fadeIn">
+
+			        <div class="container">
+
+			            <h2 class="title-style-1">Board Members<span class="title-under"></span></h2>
+
+			            <div class="row members-row">
+
+			                <div class="col-md-3 col-sm-6">
+
+			                    <div class="team-member">
+
+			                        <div class="thumnail">
+
+			                            <img src="{% static 'assets/images/team/member-2.jpg' %}" alt="" class="cause-img">
+
+			                        </div>
+
+
+
+			                        <h4 class="member-name">Sajan George</h4>
+
+			                        <div class="member-position">
+			                            CO-FOUNDER
+			                        </div>
+
+			                        <div class="btn-holder">
+			                          <a href="mailto:gsajan52@gmail.com?subject=Enquiry-The Travancore Charitable Trust" class="btn about-icon"> <i class="fa fa-envelope"></i> </a>
+			                          <a href=#" class="btn about-icon"> <i class="fa fa-facebook"></i> </a>
+			                          <a href="#" class="btn about-icon"> <i class="fa fa-twitter"></i> </a>
+			                          <a href="tel:+918086738848" class="btn about-icon"> <i class="fa fa-phone"></i> </a>
+
+			                        </div>
+
+
+
+			                    </div> <!-- /.team-member -->
+
+			                </div>
+
+
+			                <div class="col-md-3 col-sm-6">
+
+			                    <div class="team-member">
+
+			                        <div class="thumnail">
+
+			                            <img src="{% static 'assets/images/team/member-2.jpg' %}" alt="" class="cause-img">
+
+			                        </div>
+
+
+
+			                        <h4 class="member-name">Harikrishnan Vijayan</h4>
+
+			                        <div class="member-position">
+			                            CO-FOUNDER
+			                        </div>
+
+			                        <div class="btn-holder">
+
+			                          <a href="mailto:hari.vijayan89@gmail.com?subject=Enquiry-The Travancore Charitable Trust" class="btn about-icon"> <i class="fa fa-envelope"></i> </a>
+			                          <a href="#" class="btn about-icon"> <i class="fa fa-facebook"></i> </a>
+			                          <a href="#" class="btn about-icon"> <i class="fa fa-twitter"></i> </a>
+			                          <a href="tel:+918921799665" class="btn about-icon"> <i class="fa fa-phone"></i> </a>
+
+			                        </div>
+
+
+
+			                    </div> <!-- /.team-member -->
+
+			                </div>
+
+
+			                <div class="col-md-3 col-sm-6">
+
+			                    <div class="team-member">
+
+			                        <div class="thumnail">
+
+			                            <img src="{% static 'assets/images/team/member-2.jpg' %}" alt="" class="cause-img">
+
+			                        </div>
+
+
+
+
+
+			                        <div class="member-position">
+		                                <h4 class="member-name">Lijo Thomas</h4>
+			                            CO-FOUNDER
+			                        </div>
+
+			                        <div class="btn-holder">
+
+			                          <a href="mailto:thomaslijo634@gmail.com?subject=Enquiry-The Travancore Charitable Trust" class="btn about-icon"> <i class="fa fa-envelope"></i> </a>
+			                          <a href="#" class="btn about-icon"> <i class="fa fa-facebook"></i> </a>
+			                          <a href="#" class="btn about-icon"> <i class="fa fa-twitter"></i> </a>
+			                          <a href="tel:+919744492745" class="btn about-icon"> <i class="fa fa-phone"></i> </a>
+
+			                        </div>
+
+
+
+			                    </div> <!-- /.team-member -->
+
+			                </div>
+
+			            </div> <!-- /.row -->
+
+			        </div>
+
+			    </div>
 
 	</div>
 
