--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -312,33 +312,72 @@
 
 
   </div> <!-- /.home-reasons -->
-  <!--Up counter-->
-  <!-- <section id="counter" >
-    <div style="margin-right: 0px;" class="row">
+  <!-- Up counter-->
+
+  <section id="counter" >
+    <div class="container">
+      <div class="column">
+          <div class="card">
+            <p><i class="fa fa-user"></i></p>
+            <div id="updateNum1"></div>
+            <p>Lives Touched</p>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="card">
+            <p><i class="fa fa-check"></i></p>
+            <div id="updateNum2"></div>
+            <p>Our Projects</p>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="card">
+            <p><i class="fa fa-smile-o"></i></p>
+            <div id="updateNum3"></div>
+            <p>Number of Views</p>
+          </div>
+        </div>
+
+  <!-- <div class="column">
+    <div class="card">
+      <p><i class="fa fa-coffee"></i></p>
+      <h3>100+</h3>
+      <p>Meetings</p>
+    </div>
+  </div> -->
+</div>
+
+
+    <!-- <div style="margin-right: 0px;" class="row">
       <div id="block">
-        <div class="container">
+        <div class="container" >
               <div class="column-center">
                 <div id="updateNum2"></div>
                 <div id="row2">
-                  Completed Projects
+                  Our Projects
                 </div>
               </div>
+
               <div class="column-left">
                 <div id="updateNum1"></div>
                 <div id="row1">
-                  Projects in progress
+                  Lives Touched
                 </div>
               </div>
+
               <div class="column-right">
                 <div id="updateNum3"></div>
                 <div id="row3">
-                  Number of Partners
+                  Number of Views
                 </div>
               </div>
+
           </div>
         </div>
-      </div>
-    </section> -->
+      </div>-->
+    </section>
 
 
     <div style="background: #dedede; padding: 30px;" class="section-home our-sponsors animate-onscroll fadeIn">
