--- a/trust/templates/base.html
+++ b/trust/templates/base.html
@@ -149,17 +149,18 @@
                               <div class="footer-content">
                                   <ul class="footer-ul">
 
-                                        <li><a href="{% url 'index' %}"><span class="fa fa-chevron-right mr-1"></span> HOME</a></li>
-                                        <li><a href="{% url 'about' %}"><span class="fa fa-chevron-right mr-2"></span> ABOUT</a></li>
-                                        <li class="has-child"><a href="#"><span class="fa fa-chevron-right mr-2"></span> MEDIA</a>
-                                          <ul class="submenu">
+                                        <li><a href="{% url 'index' %}"><span class="fa fa-chevron-right mr-1" style="color:#ce861f;"></span> HOME</a></li>
+                                        <li><a href="{% url 'about' %}"><span class="fa fa-chevron-right mr-2" style="color:#ce861f;"></span> ABOUT</a></li>
+                                        <li class="has-child"><a href="{% url 'events' %}"><span class="fa fa-chevron-right mr-2" style="color:#ce861f;"></span> EVENTS</a>
+
+                                          <!-- <ul class="submenu">
                                             <li class="submenu-item"><a href="{% url 'events' %}"> EVENTS</a></li>
                                             <li class="submenu-item"><a href="{% url 'fundraising' %}"> FUND RAISING</a></li>
-                                          </ul>
+                                          </ul> -->
                                         </li>
-                                        <li><a href="{% url 'project' %}"><span class="fa fa-chevron-right mr-2"></span> PROJECTS</a></li>
-                                        <li><a href="{% url 'volunteer' %}"><span class="fa fa-chevron-right mr-2"></span> VOLUNTEER</a></li>
-                                        <li><a href="{% url 'contact' %}"><span class="fa fa-chevron-right mr-2"></span> CONTACT US</a></li>
+                                        <li><a href="{% url 'project' %}"><span class="fa fa-chevron-right mr-2" style="color:#ce861f;"></span> PROJECTS</a></li>
+                                        <li><a href="{% url 'volunteer' %}"><span class="fa fa-chevron-right mr-2" style="color:#ce861f;"></span> VOLUNTEER</a></li>
+                                        <li><a href="{% url 'contact' %}"><span class="fa fa-chevron-right mr-2" style="color:#ce861f;"></span> CONTACT US</a></li>
                                   </ul>
                               </div>
 
@@ -177,7 +178,7 @@
                                 <ul class="footer-ul">
                 	                <li class="footer-li"><a href="https://www.google.co.in/maps/search/Chennithala,+PO+Mavelikkara,+Allappey/@9.2616822,76.4986127,13z/data=!3m1!4b1">
                                     <span class="contact-icon footer-icon"> <i class="fa fa-map-marker"></i>
-                                  </span>Kochupurayil, Chennithala, PO Mavelikkara, Allappey. Pincode:- 690105</span>
+                                  </span>Kochupurayil building, Chennithala, PO Mavelikkara, Allappey. Pincode:- 690105</span>
                                 </a>
                                 </li>
                 	                <li class="footer-li"><span class="icon footer-icon"><i class="fa fa-phone"></i></span>
