mail sending done of money section for regular donators

--- a/trust/templates/donate.html
+++ b/trust/templates/donate.html
@@ -181,8 +181,8 @@
 
                                  <div id="money" class="form-group col-md-6">
                                        <label for="dpincode">Amount*</label>
-                                             <input type="zipcode" name="zipcode" class="form-control"
-                                             pattern="^[0-9]{6}$" title="Zipcode should be of 6 digits only" placeholder="Amount" required>
+                                             <input type="zipcode" name="amount" class="form-control"
+                                              placeholder="Amount" required>
                                  </div>
 
                                 </div>
@@ -241,8 +241,8 @@
 
                                         <div id="money2" class="form-group col-md-6">
                                               <label for="dpincode">Amount*</label>
-                                                    <input type="zipcode" name="dpincode" class="form-control"
-                                                    pattern="^[0-9]{6}$" title="Zipcode should be of 6 digits only" placeholder="Amount" required>
+                                                    <input type="zipcode" name="amount" class="form-control"
+                                                     placeholder="Amount" required>
                                         </div>
 
                                       </div>
