--- a/trust/templates/donate.html
+++ b/trust/templates/donate.html
@@ -182,7 +182,7 @@
                                  <div id="money" class="form-group col-md-6">
                                        <label for="dpincode">Amount*</label>
                                              <input type="zipcode" name="amount" class="form-control"
-                                              placeholder="Amount" required>
+                                              placeholder="Amount">
                                  </div>
 
                                 </div>
@@ -242,7 +242,7 @@
                                         <div id="money2" class="form-group col-md-6">
                                               <label for="dpincode">Amount*</label>
                                                     <input type="zipcode" name="amount" class="form-control"
-                                                     placeholder="Amount" required>
+                                                     placeholder="Amount">
                                         </div>
 
                                       </div>
