Payment gateway staging, javascript alert on form submission

--- a/trust/templates/index.html
+++ b/trust/templates/index.html
@@ -423,5 +423,11 @@
         </div>
 
     </div> <!-- /.our-sponsors -->
+    {% if submitted %}
+        <script type="text/javascript">
+          alert("Your request has been received successfully! We will get back to you as soon as possible.");
+        </script>
+
+  {% endif %}
 
 {% endblock %}
